--- a/index.html
+++ b/index.html
@@ -4,12 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/main.css">
     <title>Turno.</title>
 </head>
 <body>
 
-    <a href="./pages/listaTurnos.html">Hola mundo</a>
+    <div class="bodyLogin">
+
+        <div class="bodyLogin__titulo">
+
+            <h2 class="bodyLogin__titulo__bienvenido">Bienvenido/a a la App</h2>
+            <h1>TuTurno.</h1>
+
+        </div>
+
+        <div class="bodyLogin__divLogin">
+
+            <h2 class="bodyLogin__divLogin__titulo">Inicio de sesión</h2>
+            <h4 class="bodyLogin__divLogin__label">Nombre de Usuario o Email</h4>
+            <input type="text" class="bodyLogin__divLogin__input" placeholder=" Ingrese su Usuario o Email">
+            <h4 class="bodyLogin__divLogin__label">Contraseña</h4>
+            <input type="password" name="" id="" class="bodyLogin__divLogin__input" placeholder=" Ingrese su contraseña">
+            <a class="bodyLogin__divLogin__btn" href="./pages/listaTurnos.html">
+                <button class="bodyLogin__divLogin__btn__prop">Iniciar Sesión</button>                
+            </a>
+
+        </div>
+
+    </div>
     
 
 
