--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a class="bodyLogin__divLogin__btn" href="./pages/listaTurnos.html">
                 <button class="bodyLogin__divLogin__btn__prop">Iniciar Sesión</button>                
             </a>
+            <a class="bodyLogin__divLogin__btn" href="./pages/registrarse.html">
+                <button class="bodyLogin__divLogin__btn__prop">Registrarse</button>                
+            </a>
 
         </div>
 
